--- a/.github/workflows/clone.yml
+++ b/.github/workflows/clone.yml
@@ -159,7 +159,12 @@ jobs:
         run: |
           cd /tmp/source-repo
           echo "Deploying to Fly.io app: ${{ github.event.inputs.fly_app_name }}"
-          flyctl deploy --app ${{ github.event.inputs.fly_app_name }} --remote-only || {
+          
+          # Authenticate to Fly registry
+          flyctl auth docker
+          
+          # Deploy with remote builder
+          flyctl deploy --app ${{ github.event.inputs.fly_app_name }} --remote-only --wait-timeout 300 || {
             echo "Deployment failed. Fly.io status:"
             flyctl status --app ${{ github.event.inputs.fly_app_name }}
             exit 1
