--- a/.github/workflows/deploy-to-cloudflare.yml
+++ b/.github/workflows/deploy-to-cloudflare.yml
@@ -248,10 +248,16 @@ jobs:
 
       - name: Send callback notification
         if: always()
+        continue-on-error: true
         run: |
           APP_URL="${{ secrets.APP_URL }}"
+          
+          # Skip callback if no APP_URL is configured
           if [ -z "$APP_URL" ]; then
-            APP_URL="http://localhost:3000"
+            echo "⚠️  APP_URL not configured - skipping callback"
+            echo "This is normal for local development"
+            echo "To enable callbacks, add APP_URL secret to your GitHub repository"
+            exit 0
           fi
           
           if [ "${{ job.status }}" == "success" ] && [ "${{ steps.deploy.outcome }}" == "success" ]; then
@@ -278,7 +284,7 @@ jobs:
               \"error\": \"${ERROR}\"
             }" \
             -w "\nHTTP_CODE:%{http_code}" \
-            -s)
+            -s) || true
           
           HTTP_CODE=$(echo "$CALLBACK_RESPONSE" | grep "HTTP_CODE:" | cut -d: -f2)
           RESPONSE_BODY=$(echo "$CALLBACK_RESPONSE" | grep -v "HTTP_CODE:")
@@ -307,30 +313,3 @@ jobs:
       #         "ttl": 1,
       #         "proxied": true
       #       }'
-
-      - name: Send callback notification
-        if: always()
-        run: |
-          if [ "${{ job.status }}" == "success" ] && [ "${{ steps.deploy.outcome }}" == "success" ]; then
-            STATUS="completed"
-          else
-            STATUS="failed"
-          fi
-          
-          echo "Deployment status: $STATUS"
-          echo "Project URL: https://${{ github.event.inputs.cloudflare_project_name }}.pages.dev"
-          
-          # Send callback to app (use APP_URL secret or default to localhost)
-          APP_URL="${{ secrets.APP_URL }}"
-          if [ -z "$APP_URL" ]; then
-            APP_URL="http://localhost:3000"
-          fi
-          
-          curl -X POST "${APP_URL}/api/cloudflare-deploy-callback" \
-            -H "Content-Type: application/json" \
-            -d "{
-              \"appId\": \"${{ github.event.inputs.app_id }}\",
-              \"status\": \"${STATUS}\",
-              \"url\": \"https://${{ github.event.inputs.cloudflare_project_name }}.pages.dev\",
-              \"projectName\": \"${{ github.event.inputs.cloudflare_project_name }}\"
-            }" || echo "Failed to send callback (this is normal if app is not accessible)"
